Fix bug where videos overflow container between small and medium breakpoints (set % height on the section)

--- a/compass_base/sass/modules/_content.scss
+++ b/compass_base/sass/modules/_content.scss
@@ -87,7 +87,9 @@
 .work-section {
   padding-top: 5%;
   @include mq-padding( 10%, 10%, 5% 10% 15%, 5% 10% 15%);
+  height: 20%;
 }
+//handle special overflow case and Sass being fussy about assigning a new breakpoint
 .sect-title {
   text-align: right;
   margin-right: 10%;
